<resources>
    <string name="app_name">Certificate generator</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="shortcut_working">Creating the certificate ...</string>
    <string name="tab_certificates">Certificates</string>
    <string name="tab_profiles">Profiles</string>
    <string name="error_no_profile">Error: You must have created at least one profile before generating a certificate.</string>
    <string name="error_no_pdf_reader">No PDF reader was found!</string>
    <string name="error_no_attestation1">No certificates have been selected. The most recent one has therefore been selected!</string>
    <string name="error_no_attestation2">No certificates were found!</string>
    <string name="error_no_pdf">The PDF file of this certificate was not found! The QR Code is still usable.</string>
    <string name="error_invalid_reasons">Selected motifs are not valid with the type of certificate!</string>
    <string name="activity_attestation_view_title">My certificate</string>
    <string name="activity_attestation_view_qr">QR Code</string>
    <string name="activity_attestation_view_pdf">Export PDF</string>
    <string name="activity_profile_edit_title">Create a new profile</string>
    <string name="activity_profile_create_success">The profile was successfully created.</string>
    <string name="activity_profile_edit_firstname">Firstname</string>
    <string name="activity_profile_edit_lastname">Lastname</string>
    <string name="activity_profile_edit_birthdate">Birthdate</string>
    <string name="activity_profile_edit_placeofbirth">Birthplace</string>
    <string name="activity_profile_edit_address">Address</string>
    <string name="activity_profile_edit_city">City</string>
    <string name="activity_profile_edit_zipcode">Zipcode</string>
    <string name="activity_profile_edit_firstname_input">First name field</string>
    <string name="activity_profile_edit_lastname_input">Name field</string>
    <string name="activity_profile_edit_birthdate_input">Date of birth field</string>
    <string name="activity_profile_edit_placeofbirth_input">Field City of birth</string>
    <string name="activity_profile_edit_address_input">Address field</string>
    <string name="activity_profile_edit_city_input">City field</string>
    <string name="activity_profile_edit_zipcode_input">Postcode field</string>
    <string name="activity_profile_edit_error_firstname">The first name field is not valid!</string>
    <string name="activity_profile_edit_error_lastname">The name field is not valid!</string>
    <string name="activity_profile_edit_error_birthday">The date of birth is not valid!</string>
    <string name="activity_profile_edit_error_placeofbirth">The place of birth is not valid!</string>
    <string name="activity_profile_edit_error_address">The address is not valid!</string>
    <string name="activity_profile_edit_error_city">The city is not valid!</string>
    <string name="activity_profile_edit_error_zipcode">The postcode is not valid!</string>
    <string name="activity_about_title">Settings</string>
    <string name="activity_about_switch_autodelete">Automatically delete certificates created more than 24 hours ago</string>
    <string name="activity_about_switch_deletewarning">Deactivate confirmation before deletion</string>
    <string name="activity_about_switch_notification">Disable notification when creating a certificate.</string>
    <string name="activity_about_github">Source code:</string>
    <string name="activity_about_credits_title">Used libraries :</string>
    <string name="activity_about_credits_infos">When using this application, no data is transmitted to a third party or via the Internet.\n\nThe use of this application must be done with due care and is the responsibility of the user.\n\nIn accordance with the standard, the QR Codes generated contain the date and time of creation of the certificate.</string>
    <string name="activity_about_version">Version: %1$s\n\nUsed space: %2$s</string>
    <string name="activity_about_credits" translatable="false">GSON:\n<a href="https://github.com/google/gson">https://github.com/google/gson</a>\n\nPdfBox-Android:\n<a href="https://github.com/TomRoush/PdfBox-Android">https://github.com/TomRoush/PdfBox-Android</a>\n\nAndroidPdfViewer:\n<a href="https://github.com/barteksc/AndroidPdfViewer">https://github.com/barteksc/AndroidPdfViewer</a>\n\nQR-Code-generator:\n<a href="https://github.com/nayuki/QR-Code-generator">https://github.com/nayuki/QR-Code-generator</a>\n\nGénérateur d\'attestation:\n<a href="https://github.com/LAB-MI/attestation-deplacement-derogatoire-q4-2020">https://github.com/LAB-MI/attestation-deplacement-derogatoire-q4-2020</a></string>
    <string name="activity_about_github_link" translatable="false"><a href="https://github.com/RENITI/AttestationsGenerator/">https://github.com/RENITI/AttestationsGenerator/</a></string>
    <string name="activity_about_contact" translatable="false">contact@reniti.fr</string>
    <string name="fragment_attestations_delete_title">Are you sure you want to remove this certificate?</string>
    <string name="fragment_attestations_title">You do not have any certificates. Press the pencil to create one.</string>
    <string name="fragment_delete_success">Supression successful!</string>
    <string name="fragment_attestation_delete_alt">Delete this certificate</string>
    <string name="fragment_attestation_details">Type: %1$s\nCreation date: %2$s at %3$s\nLast name: %4$s\nFirst name: %5$s\nBirth date: %6$s in %7$s\nAddress: %8$s\nExit date: %9$s at %10$s\nReasons: %11$s</string>
    <string name="fragment_attestation_details_clone">Clone</string>
    <string name="fragment_attestation_name">%1$s</string>
    <string name="fragment_profiles_delete_title">Are you sure you want to delete this profile?</string>
    <string name="fragment_profiles_default">This profile has been set by default!</string>
    <string name="fragment_profile_name_default">%1$s (By default)</string>
    <string name="fragment_profile_birth">%1$s in %2$s</string>
    <string name="fragment_profiles_empty">You have no profile. Press + to create one.</string>
    <string name="attestation_create_failed">An error occurred during the creation of the certificate. This is probably due to the presence of invalid characters in the profile.</string>
    <string name="attestation_create_success">Certificate successfully created! Click on it to display it.</string>
    <string name="activity_attestation_create_success">A certificate was created for %1$s with the reason %2$s.</string>
    <string name="activity_attestation_create_success2">A certificate has been created for %1$s with the reasons: %2$s</string>
    <string name="activity_attestation_create_type">Select a type of certificate</string>
    <string name="activity_attestation_create_profil">Select a profile</string>
    <string name="activity_attestation_create_input_heuresortie">Exit time field</string>
    <string name="activity_attestation_create_input_datesortie">Exit date field</string>
    <string name="activity_attestation_create_title">New certificate</string>
    <string name="activity_attestation_create_datesortie">Exit date</string>
    <string name="activity_attestation_create_heuresortie">Exit time</string>
    <string name="activity_attestation_create_reason">Reason for displacement</string>
    <string name="activity_attestation_create_error_reasons">You have to select at least one reason!</string>
    <string name="activity_attestation_create_error_profile">No profiles have been selected!</string>
    <string name="activity_attestation_create_error_datesortie">The exit date must be in the form: dd:mm:yyyyy</string>
    <string name="activity_attestation_create_error_heuresortie">The exit time must be in the form: hh:mm</string>
    <string name="notification_title">Certificate of %1$s</string>
    <string name="notification_short_desc">Tap to display</string>
    <string name="notification_long_desc">Reason%1$s: %2$s\nExit date: %3$s at %4$s\nCreation date: %5$s at %6$s</string>
    <string name="notification_channel_name">Certificate creation</string>
    <string name="reason_cf_travail">Professional activity, education and training</string>
    <string name="activity_attestation_create_reason_cf_travail">Commuting to and from work or university and training place, business trips that cannot be delayed</string>
    <string name="reason_cf_sante">Consultations and care</string>
    <string name="activity_attestation_create_reason_cf_sante">Consults and provision of care that cannot be done remotely or delayed</string>
    <string name="reason_cf_famille">Compelling family reasons, vulnerable or insecure people or childcare</string>
    <string name="activity_attestation_create_reason_cf_famille">Imperative family reasons, assisting vulnerable persons, persons in a precarious situation or taking care of children</string>
    <string name="reason_cf_handicap">Disability status</string>
    <string name="activity_attestation_create_reason_cf_handicap">Persons with a disability and their accompanying person</string>
    <string name="reason_cf_convocation">Judicial or administrative summons</string>
    <string name="activity_attestation_create_reason_cf_convocation">Judicial or administrative summons</string>
    <string name="reason_cf_missions">Mission of general interest</string>
    <string name="activity_attestation_create_reason_cf_missions">Participating in a mission of general interest upon request from an administrative authority</string>
    <string name="reason_cf_transits">Transit and long-distance travel</string>
    <string name="activity_attestation_create_reason_cf_transits">Air, rail or bus transit related to long distance journeys</string>
    <string name="reason_cf_animaux">Pets</string>
    <string name="activity_attestation_create_reason_cf_animaux">Walking a pet outdoors within 1km of one’s place of residence and for a brief amount of time</string>
    <string name="reason_confinement_sport">Activités physiques</string>
    <string name="reason_confinement_sport_desc">Déplacements dans un rayon maximal de dix kilomètres autour du domicile, liés soit à l\'activité physique individuelle des personnes, à l\'exclusion de toute pratique sportive collective, soit à la promenade avec les seules personnes regroupées dans un même domicile</string>
    <string name="reason_confinement_dep_achats">Achats</string>
    <string name="reason_confinement_dep_achats_desc">Déplacements pour effectuer des achats de première nécessité ou des retraits de commandes</string>
    <string name="reason_confinement_dep_enfants">Accompagnement des enfants à l’école</string>
    <string name="reason_confinement_dep_enfants_desc">Déplacements pour emmener et aller chercher les enfants à l\’école et à l\’occasion de leurs activités péri-scolaires</string>
    <string name="reason_confinement_dep_culte">Etablissement culturel ou lieu de culte</string>
    <string name="reason_confinement_dep_culte_desc">Déplacements pour se rendre dans un établissement culturel (bibliothèques et médiathèques) ou un lieu de culte</string>
    <string name="reason_confinement_dep_demarches">Démarches administratives ou juridiques</string>
    <string name="reason_confinement_dep_demarches_desc">Déplacements pour se rendre dans un service public pour un acte ou une démarche qui ne peuvent être réalisés à distance</string>
    <string name="reason_confinement_travail">Activité professionnelle, enseignement et formation, mission d\’intérêt général</string>
</resources>