<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_about_toolbar_appbar"
                android:theme="@style/Theme.AttestationsGenerator.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/activity_about_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:textAlignment="center"
                    android:elevation="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"

                    />



            </com.google.android.material.appbar.AppBarLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:theme="@style/Theme.AttestationsGenerator.CommonText"

                android:id="@+id/activity_about_version"

                android:layout_below="@id/activity_about_toolbar_appbar"
                android:layout_marginTop="16dip"
                android:layout_marginHorizontal="16dip"
                android:textStyle="bold"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AttestationsGenerator.CommonText"
                android:layout_marginHorizontal="16dip"
                android:layout_marginTop="16dp"
                android:layout_below="@id/activity_about_version"
                android:id="@+id/activity_about_credits_title"
                android:text="@string/activity_about_credits_title"
                android:textStyle="bold">


            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AttestationsGenerator.CommonText"
                android:layout_marginHorizontal="16dip"
                android:layout_marginTop="5dp"
                android:layout_below="@id/activity_about_credits_title"
                android:id="@+id/activity_about_credits"
                android:text="@string/activity_about_credits">


            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AttestationsGenerator.CommonText"
                android:textStyle="bold"
                android:text="@string/activity_about_github"
                android:layout_below="@id/activity_about_credits">

            </TextView>
            <!-- android:layout_marginBottom="16dip" -->

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/reniti_logo"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:id="@+id/activity_about_logo"
                >

            </ImageView>



        </RelativeLayout>


    </ScrollView>

</RelativeLayout>